--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
   height: 0;
   max-height: 0;
   overflow: hidden;
+  transition: ease-in;
 }
 
 .fyzika_calc_expand {
@@ -107,6 +108,7 @@ body {
 #navbar {
   overflow: hidden;
   background-color: #252f6c;
+  z-index: 9999;
 }
 
 #navbar a {
