--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ body {
   text-decoration: none;
 }
 
-.logo {
-  float: left;
+.header_logo {
+  padding-bottom: 12px;
 }
 
 .search {
   float: right;
-  height: 30px;
+  height: 10px;
 }
 
 .search i {
@@ -61,15 +61,10 @@ body {
 /*Kalkulačky*/
 
 .fyzika_calcs {
-  height: 0;
-  max-height: 0;
-  overflow: hidden;
-  transition: ease-in;
-}
-
-.fyzika_calc_expand {
   height: 100%;
-  overflow: visible;
+  max-height: 100%;
+  overflow: hidden;
+  transition: 0.5s;
 }
 
 .fyzika_title {
@@ -96,12 +91,20 @@ body {
   text-decoration: none;
 }
 
+.footer-link {
+  text-decoration: underline;
+}
+
+.footer-link:hover {
+  text-decoration: none;
+}
+
 /* IDEA: To co jsem ukradl */
 
 .header {
   background-color: #e1e31a;
-  padding: 30px;
-  text-align: center;
+  padding-bottom: 40px;
+  padding-top: 20px;
   height: 30px;
 }
 
@@ -134,7 +137,7 @@ body {
 
 footer {
   width: 100%;
-  position: absolute;
+  position: relative;
   bottom: 0;
 }
 
