--- a/style.css
+++ b/style.css
@@ -55,25 +55,24 @@ body {
 
 /*Kalkulačky*/
 
-.fyzika_calcs {
+.calcs {
   height: 100%;
   max-height: 100%;
   overflow: hidden;
   transition: 0.5s;
 }
 
-.fyzika_title {
+.calc_title {
   font-size: 2em;
-  cursor: pointer;
   font-weight: 700;
 }
 
-.fyzika_subtitle {
+.calcs_subtitle {
   font-size: 1.7em;
   font-weight: 600;
 }
 
-.fyzika_calc_title {
+.calc_title {
   font-size: 1.3em;
 }
 
@@ -94,6 +93,9 @@ body {
   text-decoration: none;
 }
 
+.row a {
+  text-decoration: none;
+}
 /* IDEA: To co jsem ukradl */
 
 .header {
@@ -203,4 +205,10 @@ footer {
   transition: 0.5s;
   border: 0px;
   border-radius: 50%;
+}
+
+footer {
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
 }
